# darknet

./: CMakeLists.txt  Standalone.cmake  activate.sh
DarknetAPI/: CMakeLists.txt  DarknetAPI.cpp  DarknetAPI.h
data/: custom_depth.data  custom_rgb.data  movie_names.txt  test_custom_depth.txt  test_custom_rgb.txt  test_yolod.txt  test_yolod_map_morton.txt  test_yolod_morton.txt  train_custom_depth.txt  train_custom_rgb.txt  train_yolod.txt  train_yolod_map_morton.txt  train_yolod_morton.txt  yolod.data  yolod_map_morton.data  yolod_morton.data
examples/: CMakeLists.txt  attention.c  captcha.c  cifar.c  classifier.c  coco.c  darknet.c  detector.c  go.c  instance-segmenter.c  lsd.c  nightmare.c  regressor.c  rnn.c  segmenter.c  super.c  tag.c  yolo.c
include/: darknet.h
python/: CMakeLists.txt
python/test/: get_model.sh  main.py
src/: CMakeLists.txt  activations.h  box.c  cuda.c  detector.c  image.c  network.c  network.h  parser.c  region_layer.c  utils.c
src/DarknetAPI/: DarknetAPI.cpp  DarknetAPI.h
test/: CMakeLists.txt  main.cpp
